librbd: ignore -EOPNOTSUPP errors when retrieving image group membership

The Luminous release did not support adding images to a group (it only
included the bare-minimum support for creating groups). Commit fc85b1abd19
incorrectly dropped support for ignoring this possible failure. This
prevents Nautilus-release clients from opening images contained within
a Luminous-release cluster.

Fixes: http://tracker.ceph.com/issues/38834
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit d63aaf9196fe0b454b6c73282108578a30cb9c84)